Added a WebSocket example to the Yolk demo.
The demo use both broadcasting to all connected clients, and sending of unique
data to individual clients.

--- a/demo/exe/templates/website/index.tmpl
+++ b/demo/exe/templates/website/index.tmpl
@@ -56,6 +56,10 @@
         <dd>
             Go <a href="/syndication">here</a> to check that the Atom syndication works. You should see some Atom XML.
         </dd>
+        <dt>WebSocket test</dt>
+        <dd>
+            Go <a href="/websocket">here</a> to check that the WebSocket demo works. Note that you need a moderately modern browser, such as Firefox or Google Chrome.
+        </dd>
         <dt>CSS test</dt>
         <dd>
             If <span class="bold">bold</span>, <span class="strike">line-through</span> and <span class="italic">italic</span> work, then the CSS handler is functional.
