--- a/demo/exe/templates/website/db_test.tmpl
+++ b/demo/exe/templates/website/db_test.tmpl
@@ -27,28 +27,25 @@
         </title>
     </head>
 <body>
-    <h3>Database test</h3>
-    @@IF@@ @_DB_SETUP_@
+    <h3>PostgreSQL test</h3>
+    @@IF@@ @_POSTGRESQL_SETUP_@
         <p>
-            It appears that I've been able to connect to the database set in configuration/my_config.ini.
+            Connection to PostgreSQL database succeeded.
         </p>
         <p>
-            The test will now proceed with creating a table, adding and querying some data and finally dropping the table.
+            The test will now proceed with creating a table, inserting and querying some data and finally dropping the table.
         </p>
         <h4>Test output</h4>
         <ul>
             @@TABLE@@
-                <li>@_MESSAGES_@</li>
+                <li>@_POSTGRESQL_MESSAGES_@</li>
             @@END_TABLE@@
-            @@IF@@ @_SUCCESS_@
+            @@IF@@ @_POSTGRESQL_SUCCESS_@
                 <li class="green">Test successfully completed!</li>
             @@ELSE@@
                 <li class="red">Test failed!</li>
             @@END_IF@@
         </ul>
-        <p>
-            If all went well, go back to the <a href="/">main page</a>. If you have some red output, check the log files, fix the error and try again.
-        </p>
     @@ELSE@@
         <p>
             In order to test if Yolk can connect and interact with a PostgreSQL database, you must create an empty PostgreSQL database and then set the four database parameters in configuration/my_config.ini accordingly:
@@ -66,5 +63,26 @@
             When you've done this, simply refresh this page, or drop this test and go back to the <a href="/">main page</a>.
         </p>
     @@END_IF@@
+    <h3>SQLite test</h3>
+    <p>
+        Connection to SQLite database succeeded.
+    </p>
+    <p>
+        The test will now proceed with inserting, querying and deleting some data.
+    </p>
+    <h4>Test output</h4>
+    <ul>
+        @@TABLE@@
+            <li>@_SQLITE_MESSAGES_@</li>
+        @@END_TABLE@@
+        @@IF@@ @_SQLITE_SUCCESS_@
+            <li class="green">Test successfully completed!</li>
+        @@ELSE@@
+            <li class="red">Test failed!</li>
+        @@END_IF@@
+    </ul>
+    <p>
+        If all went well, go back to the <a href="/">main page</a>. If you have some red output, check the log files, fix the error and try again.
+    </p>
 </body>
 </html>
